# python-best-practices

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/python_best_practices/: main.py
tests/: test_main.py
